--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.3.2",
     "@mantine/modals": "^8.3.2",
     "@mantine/notifications": "^8.3.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "lucide-react": "^0.544.0",
